Navbar prototype completed. Added icons

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,38 +18,12 @@ body {
 
 	background-color: var(--light-bg);
 	color: var(--light-fg);
+
+	display: flex;
+	flex-direction: row;
 }
 
 body.dark{
 	background-color: var(--dark-bg);
 	color: var(--dark-fg);
-}
-
-div.navbar {
-	background-color: var(--light-bg2);
-	color: var(--light-fg2);
-
-	display: flex;
-	align-items: flex-start;
-
-	width: 100%;
-}
-
-div.navbar.dark {
-	background-color: var(--dark-bg2);
-	color: var(--dark-fg2);
-}
-
-div.navbar > img.icon {
-	margin: auto;
-	margin-left: 2em;
-	margin-right: 2em;
-
-	max-height: 40px;
-
-	flex-basis: auto;
-}
-
-div.navbar > ul > li {
-	list-style-type: none;
 }
