--- a/styles/content.css
+++ b/styles/content.css
@@ -1,17 +1,25 @@
 div.content {
 	margin-left: auto;
 	margin-right: auto;
-	padding: 15px;
+
+	padding-left: 10%;
+	padding-right: 5%;
+
+	/*padding: 15px;*/
 	padding-top: 2em;
 
-	width: 60%;
+	top: 0;
+
+	width: 95%;
 
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 
-	border: 2px solid grey;
+	border: 2px solid lightslategrey;
 	border-top: none;
 	border-bottom: none;
 
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
