--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -32,10 +32,12 @@ div.navbar.dark {
 	color: var(--dark-fg2);
 }
 
-div.navbar img {
+div.navbar.dark img:not([id]) {
+	filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+}
 
+div.navbar img, div.navbar input {
 	max-height: 40px;
-
 	flex-basis: auto;
 }
 
@@ -68,14 +70,11 @@ div.navbar > ul > li > img {
 	max-width: 2em;
 }
 
-div.navbar img.theme {
+div.navbar input.theme {
+	z-index: 1000;
 	display: none;
 }
 
-div.navbar img.theme:hover{
-	cursor: pointer;
-}
-
-div.navbar img.theme.active {
+div.navbar input.theme.active {
 	display: block;
 }
