--- a/styles/post.css
+++ b/styles/post.css
@@ -2,7 +2,7 @@ div.post {
 	/*border-bottom: 2px solid gray;
 	border-top: 2px solid gray;*/
 
-	background-color: rgba(255, 255, 255, 0.1);
+	background-color: rgba(0, 0, 0, 0.1);
 
 	margin-bottom: 2em;
 
@@ -16,10 +16,18 @@ div.post {
 	transition: background-color 0.2s;
 }
 
+body.dark div.post{
+	background-color: rgba(255, 255, 255, 0.1);
+}
+
 div.post:hover {
 	background-color: rgba(0, 0, 0, 0.4);
 
 	cursor: pointer;
+}
+
+body.dark div.post:hover {
+	background-color: rgba(0, 0, 0, 0.7);
 }
 
 div.post > .profile-container {
