--- a/styles/post.css
+++ b/styles/post.css
@@ -6,8 +6,8 @@ div.post {
 
 	margin-bottom: 2em;
 
-	width: 100%;
-	padding: 1em;
+	width: 95%;
+	padding: 1rem;
 
 	display: flex;
 	align-items: flex-start;
