--- a/styles/content.css
+++ b/styles/content.css
@@ -1,25 +1,40 @@
-div.content {
-	margin-left: auto;
-	margin-right: auto;
-
-	padding-left: 10%;
-	padding-right: 5%;
-
-	/*padding: 15px;*/
-	padding-top: 2em;
-
-	top: 0;
-
-	width: 95%;
-
+main.content {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
 
-	border: 2px solid lightslategrey;
+	/*border: 2px solid lightslategrey;
 	border-top: none;
 	border-bottom: none;
+*/
+}
 
-	overflow-y: scroll;
-	overflow-x: hidden;
+
+@media only screen and (max-width: 600px) {
+	main.content {
+		margin: 0;
+
+		/*padding: 15px;*/
+		padding: 0;
+		padding-left: 1rem;
+		padding-right: 1rem;
+		top: 0;
+
+		width: 92%;
+	}
+}
+
+
+@media only screen and (min-width: 600px) {
+	main.content {
+		margin-left:  5rem;
+		margin-right: 2rem;
+
+		/*padding: 15px;*/
+		padding-top: 2rem;
+		padding-left: 1rem;
+		top: 0;
+
+		width: 90%;
+	}
 }
