--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,19 +1,20 @@
 /* width */
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	width: 10px;
-  }
+  z-index: 1;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  background: var(--dark-bg2); 
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-	background: var(--dark-bg2); 
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-	background: var(--light-bg2); 
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-	background: #555; 
-  }
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: var(--light-bg2); 
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
