--- a/styles/content.css
+++ b/styles/content.css
@@ -13,6 +13,7 @@ main.content {
 @media only screen and (max-width: 600px) {
 	main.content {
 		margin: 0;
+		margin-bottom: 5rem;
 
 		/*padding: 15px;*/
 		padding: 0;
