--- a/styles/login/page.css
+++ b/styles/login/page.css
@@ -1,17 +1,63 @@
 body {
-    background: linear-gradient(90deg, var(--dark-bg) 0%, var(--dark-bg2) 100%);
+    background: linear-gradient(90deg, var(--dark-bg) 0%, var(--dark-bg3) 100%);
+
+    width: 100vw;
+    height: 100vh;
 }
 
 .logo-text {
-    position: absolute;
-    top: calc(50% - 35px);
-    left: calc(50% - 255px);
+    position: fixed;
+    
+    top: 50%;
+    left: 40%;
+
     z-index: 2;
+
+    transform: translate(-50%, -50%);
 }
 
-.login input[type=text] {
-    width: 250px;
-    height: 30px;
+.login {
+    position: fixed;
+    top: 55%;
+    left: 50%;
+
+    padding: 10px;
+    
+    z-index: 2;
+
+    transform: translate(0, -50%);
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.login > * {
+    margin: 0;
+}
+
+.login form {
+    width: 100%;
+}
+
+.form-inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.login > .title {
+    width: 100%;
+    text-align: center;
+}
+
+.form-inputs input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 2.3rem;
     background: transparent;
     border: 1px solid rgba(255, 255, 255, 0.6);
     border-radius: 2px;
@@ -23,58 +69,29 @@ body {
     margin-bottom: 7px;
 }
 
-.login input[type=email] {
-    width: 250px;
-    height: 30px;
-    margin-bottom: 7px;
+.form-inputs > * {transition: transform 200ms ease;}
+.form-inputs > *:hover{ transform: scale(1.1);}
 
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.6);
-    border-radius: 2px;
-    color: #fff;
-    font-family: 'Exo', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 4px;
+.form-inputs input:focus {
+    background-color: rgba(0,0,0, 0.4);
+    transform: scale(1.1);
 }
 
-.login input[type=password] {
-    width: 250px;
-    height: 30px;
-    background: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.6);
-    border-radius: 2px;
-    color: #fff;
-    font-family: 'Exo', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 7px;
+.form-inputs button {
+    width: 90%;
+    height: 3rem;
 
-    padding: 4px;
-    margin-top: 10px;
-}
+    font-size: 1.3rem;
 
-.login input[type=button] {
-    width: 260px;
-    height: 35px;
-    background: #fff;
-    border: 1px solid #fff;
     cursor: pointer;
-    border-radius: 2px;
-    color: #a18d6c;
-    font-family: 'Exo', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    padding: 6px;
-    margin-top: 10px;
-}
 
-.login input[type=button]:hover {
-    opacity: 0.8;
-}
+    border: 1px solid var(--light-bg);
+    border-radius: 25px;
 
-.login input[type=button]:active {
-    opacity: 0.6;
+    color: var(--dark-fg);
+    background-image: linear-gradient(-90deg, var(--dark-bg) -100%, var(--dark-bg3) 100%);
+
+    margin: auto;
 }
 
 .login input[type=text]:focus {
@@ -87,24 +104,10 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.login input[type=button]:focus {
-    outline: none;
-}
-
 ::-webkit-input-placeholder {
     color: rgba(255, 255, 255, 0.6);
 }
 
 ::-moz-input-placeholder {
     color: rgba(255, 255, 255, 0.6);
-}
-
-.login {
-    position: absolute;
-    top: calc(50% - 80px);
-    left: calc(50% - 50px);
-    height: 150px;
-    width: 350px;
-    padding: 10px;
-    z-index: 2;
 }
