--- a/styles/main.css
+++ b/styles/main.css
@@ -2,8 +2,9 @@
 	font-size: 16px;
 	font-family: 'Ubuntu';
 
-	--dark-bg: #020111;
-	--dark-bg2: #11111b;
+	--dark-bg: #080d14;
+	--dark-bg2: #091220;
+	--dark-bg3: #132746;
 	--dark-fg: #ccc;
 
 	--light-bg: white;
