--- a/styles/logo.css
+++ b/styles/logo.css
@@ -8,7 +8,7 @@
 .logo-text div {
     float: left;
     color: #fff;
-    font-family: 'Exo', sans-serif;
+    font-family: 'Exo', sans-serif !important;
     font-size: 35px;
     font-weight: 200;
 }
