Update to the posts, profile page and replies

--- a/styles/home/content.css
+++ b/styles/home/content.css
@@ -2,6 +2,7 @@ main.content {
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	margin-top: 1rem;
 
 	/*border: 2px solid lightslategrey;
 	border-top: none;
@@ -12,7 +13,6 @@ main.content {
 
 @media only screen and (max-width: 600px) {
 	main.content {
-		margin: 0;
 		margin-bottom: 5rem;
 
 		/*padding: 15px;*/
@@ -22,6 +22,8 @@ main.content {
 		top: 0;
 
 		width: 92%;
+
+		font-size: 0.95rem;
 	}
 }
 
@@ -34,7 +36,6 @@ main.content {
 		/*padding: 15px;*/
 		padding-top: 2rem;
 		padding-left: 1rem;
-		top: 0;
 
 		width: 90%;
 	}
