--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -1,4 +1,5 @@
 div.post {
+	box-sizing: border-box;
 	/*border-bottom: 2px solid gray;
 	border-top: 2px solid gray;*/
 
@@ -6,7 +7,7 @@ div.post {
 
 	margin-bottom: 2em;
 
-	width: 95%;
+	width: 100%;
 	padding: 1rem;
 
 	display: flex;
@@ -16,19 +17,21 @@ div.post {
 	transition: background-color 0.2s;
 }
 
+div.post:not(.reply) {
+	margin-bottom: 2em;
+}
+
 body.dark div.post{
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
-div.post:hover {
+/*div.post:hover {
 	background-color: rgba(0, 0, 0, 0.4);
-
-	cursor: pointer;
 }
 
 body.dark div.post:hover {
 	background-color: rgba(0, 0, 0, 0.7);
-}
+}*/
 
 div.post > .profile-container {
 	width: 50px;
@@ -57,14 +60,49 @@ div.post > div.post-content {
 	align-items: flex-start;
 	flex-direction: column;
 
-	margin-left: 2em;
+	margin-left: 1em;
 }
 
-div.post > div.post-content > .username {
-	font-weight: bold;
-	margin-top: 0;
+.post-content > .post-info {
+	display: flex;
+	flex-direction: column;
+}
+
+.post-content .post-info1 {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.post-content .post-info1 > * {
+	margin: 0;
+}
+
+.post-content .post-info1 > *:first-child {
+	margin-right: 1rem;
 }
 
 div.post > div.post-content > .post-text {
 	width: 95%;
+}
+
+.post-content a.username {
+	text-decoration: none;
+	color: rgb(121, 168, 182);
+}
+
+.post-content .info {
+	color: var(--light-fg2);
+}
+
+body.dark .post-content .info{
+	color: var(--dark-fg2);
+}
+
+.post.reply {
+	margin-bottom: 0;
+}
+
+.post.reply{
+	margin-top: 2rem;
 }
