--- a/styles/home/navbar.css
+++ b/styles/home/navbar.css
@@ -11,7 +11,7 @@ nav.navbar {
 	position: fixed; /* Fixed Sidebar (stay in place on scroll) */
 	z-index: 2; /* Stay on top */
 	left: 0;
-	overflow-x: hidden; /* Disable horizontal scroll */
+	overflow: hidden; /* Disable horizontal scroll */
 
 	transition: width 200ms ease;
 }
