--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -3,7 +3,7 @@ div.post {
 	/*border-bottom: 2px solid gray;
 	border-top: 2px solid gray;*/
 
-	background-color: rgba(0, 0, 0, 0.1);
+	border: solid rgba(0, 0, 0, 0.1) 2px;
 
 	margin-bottom: 2em;
 
@@ -22,7 +22,7 @@ div.post:not(.reply) {
 }
 
 body.dark div.post{
-	background-color: rgba(255, 255, 255, 0.1);
+	border: solid rgba(255, 255, 255, 0.1) 2px;
 }
 
 /*div.post:hover {
