--- a/styles/logo.css
+++ b/styles/logo.css
@@ -7,10 +7,14 @@
 
 .logo-text div {
     float: left;
-    color: #fff;
+    color: rgb(83, 95, 107);
     font-family: 'Exo', sans-serif !important;
     font-size: 35px;
     font-weight: 200;
+}
+
+.dark .logo-text div {
+    color: white;
 }
 
 .logo-text div span {
