--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -1,13 +1,14 @@
 div.post {
 	box-sizing: border-box;
-	/*border-bottom: 2px solid gray;
-	border-top: 2px solid gray;*/
 
-	border: solid rgba(0, 0, 0, 0.1) 2px;
+	border-radius: 15px;
+
+	background-color: var(--light-post-bg);
 
 	margin-bottom: 2em;
 
 	width: 100%;
+	max-width: 1200px;
 	padding: 1rem;
 
 	display: flex;
@@ -22,16 +23,8 @@ div.post:not(.reply) {
 }
 
 body.dark div.post{
-	border: solid rgba(255, 255, 255, 0.1) 2px;
+	background-color: var(--dark-post-bg);
 }
-
-/*div.post:hover {
-	background-color: rgba(0, 0, 0, 0.4);
-}
-
-body.dark div.post:hover {
-	background-color: rgba(0, 0, 0, 0.7);
-}*/
 
 div.post > .profile-container {
 	width: 50px;
@@ -108,9 +101,79 @@ body.dark .post-content .info{
 }
 
 .post.reply {
+	width: 100%;
+
+	border-radius: 0;
+
 	margin-bottom: 0;
+	margin-top: 1rem;
+
+	border-bottom: solid rgb(44, 44, 44) 1px;
 }
 
-.post.reply{
+.dark .post.reply {
+	border-bottom: solid rgb(95, 95, 95) 1px;
+}
+
+.post.reply:last-child {
+	border-bottom: none;
+}
+
+
+/* ACCORDION FOR COLLAPSING REPLIES */
+.reply_accordion {
+	width: 100%;
+
 	margin-top: 2rem;
+}
+
+.accordion_button {
+	display: block;
+	background-color: transparent;
+	border: none;
+	
+	margin: 0;
+	padding: 0;
+
+	color: var(--light-fg);
+}
+
+.accordion_button::before {
+	content: '\25be'; /* Unicode down triangle*/
+	float: left;
+	transform: scale(1.5);
+
+	margin-right: 1.2rem;
+
+	transition: transform 200ms ease-out;
+}
+
+.dark .accordion_button {	
+	color: var(--dark-fg);
+}
+
+.accordion_button.active::before {
+	transform: rotate(180deg) scale(1.5);
+}
+
+.reply_accordion .replies {
+	overflow: hidden;
+	max-height: 0;
+
+	transition: max-height 200ms ease;
+}
+
+@media only screen and (min-width: 600px) { /* Computers or tablets */
+	.accordion_button:hover {
+		cursor: pointer;
+		text-decoration: underline;
+	}
+
+	.accordion_button:hover::before {
+		transform: scale(2);
+	}
+
+	.accordion_button.active:hover::before {
+		transform: rotate(180deg) scale(2);
+	}
 }
