Fixed scrolling issue

--- a/styles/home/content.css
+++ b/styles/home/content.css
@@ -1,8 +1,13 @@
 main.content {
+	box-sizing: border-box;
+	width: 100%;
+	height: 100vh;
+
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 1rem;
+
+	overflow-y: scroll;
 
 	/*border: 2px solid lightslategrey;
 	border-top: none;
@@ -13,15 +18,11 @@ main.content {
 
 @media only screen and (max-width: 600px) {
 	main.content {
-		margin-bottom: 5rem;
-
-		/*padding: 15px;*/
-		padding: 0;
-		padding-left: 1rem;
-		padding-right: 1rem;
-		top: 0;
-
-		width: 92%;
+		padding: 1rem;
+		padding-bottom: 3rem;
+		margin-bottom: 30rem;
+		
+		top: 3rem;
 
 		font-size: 0.95rem;
 	}
@@ -30,13 +31,8 @@ main.content {
 
 @media only screen and (min-width: 600px) {
 	main.content {
-		margin-left:  5rem;
-		margin-right: 2rem;
-
-		/*padding: 15px;*/
 		padding-top: 2rem;
-		padding-left: 1rem;
-
-		width: 90%;
+		padding-left: 6rem;
+		padding-right: 6rem;
 	}
 }
