--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -8,7 +8,7 @@ div.post {
 	margin-bottom: 2em;
 
 	width: 100%;
-	max-width: 1200px;
+	max-width: 60ch;
 	padding: 1rem;
 
 	display: flex;
@@ -221,7 +221,7 @@ body.dark .post-content .info{
 	stroke-width: 10px;
 	stroke: var(--light-fg2);
 
-	transition: fill 200ms ease, stroke 200ms ease;
+	transition: all 200ms ease;
 }
 
 .dark .social_buttons svg path {
@@ -240,6 +240,45 @@ body.dark .post-content .info{
 	fill: black;
 }
 
+/* NEW POST STYLE */
+.new-post-button {
+	border: 2px solid lightgrey;
+	background-color: #fff;
+	font-size: 16px;
+	height: 2.5em;
+	width: 2.5em;
+	border-radius: 50%;
+
+	position: fixed;
+	bottom: 3.5rem;
+	left: .5rem;
+}
+
+.new-post-button:after,
+.new-post-button:before {
+	content: "";
+	display: block;
+	background-color: grey;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.new-post-button:before {
+	height: 1em;
+	width: 0.2em;
+}
+.new-post-button:after {
+	height: 0.2em;
+	width: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+	.social_buttons .like-dislike button:active {
+		transform: scale(1.3);
+	}
+}
 
 @media only screen and (min-width: 600px) { /* Computers or tablets */
 	.accordion_button:hover {
