--- a/styles/home/scrollbar.css
+++ b/styles/home/scrollbar.css
@@ -1,20 +1,27 @@
 /* width */
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	width: 10px;
   z-index: 1;
 }
 
+
+@media only screen and (max-width: 600px) {
+	*::-webkit-scrollbar {
+		width: 2px;
+	}
+}
+
 /* Track */
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background: var(--dark-bg2); 
 }
   
 /* Handle */
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background: var(--light-bg2); 
 }
 
 /* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
   background: #555; 
 }
