--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -242,8 +242,8 @@ body.dark .post-content .info{
 
 /* NEW POST STYLE */
 .new-post-button {
-	border: 2px solid lightgrey;
-	background-color: #fff;
+	border: 2px solid var(--dark-fg);
+	background-color: var(--dark-bg2);
 	font-size: 16px;
 	height: 2.5em;
 	width: 2.5em;
@@ -252,16 +252,27 @@ body.dark .post-content .info{
 	position: fixed;
 	bottom: 3.5rem;
 	left: .5rem;
+
+	transition: all 200ms ease;
+}
+
+.new-post-button:hover {
+	cursor: pointer;
+	transform: rotate(-90deg) scale(1.4);
 }
 
 .new-post-button:after,
 .new-post-button:before {
 	content: "";
 	display: block;
-	background-color: grey;
+
+	background-color: var(--dark-fg);
+	border-radius: 1rem;
+
 	position: absolute;
 	top: 50%;
 	left: 50%;
+
 	transform: translate(-50%, -50%);
 }
 
@@ -274,7 +285,8 @@ body.dark .post-content .info{
 	width: 1em;
 }
 
-@media only screen and (max-width: 600px) {
+/* MEDIA QUERIES (Phone/PC) */
+@media only screen and (max-width: 600px) {  /* Phone */
 	.social_buttons .like-dislike button:active {
 		transform: scale(1.3);
 	}
@@ -325,6 +337,16 @@ body.dark .post-content .info{
 	}
 	.social_buttons .dislike:hover svg path {
 		stroke: rgb(29, 29, 29);
+	}
+
+	.new-post-button {
+		font-size: 15px;
+
+		position: fixed;
+		bottom: 10rem;
+		left: 1rem;
+
+		z-index: 2;
 	}
 }
 
