--- a/styles/logo.css
+++ b/styles/logo.css
@@ -7,7 +7,7 @@
 
 .logo-text div {
     float: left;
-    color: rgb(83, 95, 107);
+    color: #535f6b;
     font-family: 'Exo', sans-serif !important;
     font-size: 35px;
     font-weight: 200;
