--- a/styles/login/page.css
+++ b/styles/login/page.css
@@ -30,7 +30,7 @@ main{
 
 	.logo-text {
 		margin-right: 0 !important;
-		margin-bottom: 4rem;
+		margin-bottom: 4em;
 	}
 
 	.login {
@@ -51,8 +51,8 @@ main{
 	flex-direction: column;
 	align-items: flex-start;
 
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 .login > .title {
@@ -63,7 +63,7 @@ main{
 .form-inputs input {
 	box-sizing: border-box;
 	width: 100%;
-	height: 2.3rem;
+	height: 2.3em;
 	background: transparent;
 	border: 1px solid rgba(255, 255, 255, 0.6);
 	border-radius: 2px;
@@ -85,9 +85,9 @@ main{
 
 button[type="submit"] {
 	width: 90%;
-	height: 3rem;
+	height: 3em;
 
-	font-size: 1.3rem;
+	font-size: 1.3em;
 
 	cursor: pointer;
 
