--- a/styles/newpost/page.css
+++ b/styles/newpost/page.css
@@ -1,5 +1,5 @@
 main {
-	margin: 2rem;
+	margin: 2em;
 }
 
 main > form{
@@ -9,19 +9,19 @@ main > form{
 }
 
 .form-group {
-	margin: 2rem 0;
+	margin: 2em 0;
 	width: 100%;
-	min-height: 10rem;
+	min-height: 10em;
 }
 
 textarea {
 	box-sizing: border-box;
 	width: 100%;
-	min-height: 20rem;
+	min-height: 20em;
 
-	padding: 1rem;
+	padding: 1em;
 
-	font-size: 1rem;
+	font-size: 1em;
 
 	color: var(--light-fg);
 	background-color: var(--light-bg2);
@@ -29,13 +29,13 @@ textarea {
 	border-radius: 10px;
 
 	outline: none;  /* Outline when writing (on focused) */
-	resize: none;   /* Remove resize handle */
+	resize: none;   /* emove resize handle */
 	overflow: auto; /* Hide the scrollbar unless necessary*/
 }
 
 textarea::placeholder {
 	color: rgb(255, 153, 0);
-	font-size: 1.25rem;
+	font-size: 1.25em;
 	text-transform: uppercase;
 	font-weight: bold;
 }
@@ -52,9 +52,9 @@ body.dark textarea::placeholder {
 
 button[type="submit"] {
 	width: 80%;
-	height: 3rem;
+	height: 3em;
 
-	font-size: 1.3rem;
+	font-size: 1.3em;
 
 	cursor: pointer;
 
@@ -65,12 +65,12 @@ button[type="submit"] {
 	background-image: linear-gradient(-90deg, var(--dark-bg) -100%, var(--dark-bg3) 100%);
 
 	margin: auto;
-	margin-top: 2rem;
+	margin-top: 2em;
 }
 
 @media only screen and (min-width: 500px) {
 	main {
-		margin-left: 7rem;
-		padding: 2rem;
+		margin-left: 7em;
+		padding: 2em;
 	}
 }
