--- a/styles/home/newpost.css
+++ b/styles/home/newpost.css
@@ -100,6 +100,39 @@
 	background-color: var(--light-bg2);
 }
 
+/* CROSS BUTTON */
+.cross {
+	position: absolute;
+
+	font-size: 10px;
+
+	right: 1em;
+	top: 1em;
+
+	background-color: unset;
+	border: none;
+
+	width: 2em;
+	height: 2em;
+
+	opacity: 0.6;
+}
+
+.cross:before, .cross:after {
+	position: absolute;
+	top:0;
+
+	content: '';
+	height: 2em;
+	width: 2px;
+	background-color: #333;
+}
+.cross:before {
+	transform: rotate(45deg);
+}
+.cross:after {
+	transform: rotate(-45deg);
+}
 
 /* MEDIA QUERIES (Phone/PC) */
 @media only screen and (max-width: 600px) {  /* Phone */
