--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -27,8 +27,10 @@ body.dark div.post{
 }
 
 div.post > .profile-container {
-	width: 50px;
-	height: 50px;
+	width: 2.5em;
+	height: 2.5em;
+
+	flex-shrink: 0;
 
 	position: relative;
 	overflow: hidden;
@@ -47,13 +49,14 @@ div.post > .profile-container > img.profile {
 }
 
 div.post > .post-content {
-	flex: 1 1;
-
 	display: flex;
 	align-items: flex-start;
 	flex-direction: column;
 
 	margin-left: 1em;
+
+	width: fit-content;
+	max-width: calc(100% - 4em);
 }
 
 .post-content > .post-info {
@@ -244,6 +247,10 @@ body.dark .post-content .info{
 @media only screen and (max-width: 600px) {  /* Phone */
 	.social_buttons .like-dislike button:active {
 		transform: scale(1.3);
+	}
+
+	div.post > .profile-container > img.profile {
+		/*width*/
 	}
 }
 
