--- a/styles/home/post.css
+++ b/styles/home/post.css
@@ -169,8 +169,8 @@ body.dark .post-content .info{
 /* SOCIAL BUTTONS (Like, dislike, share, etc) */
 
 .social_buttons {
-	width: 110%;
-	max-height: 3em;
+	width: 100%;
+	height: 1.5em;
 
 	padding: 0.5em;
 
@@ -181,7 +181,7 @@ body.dark .post-content .info{
 	border-top: solid var(--light-post-separator) 1px;
 	border-bottom: solid var(--light-post-separator) 1px;
 
-	transform: translate(-50px, 0);
+	transform: translateX(-11%);
 }
 
 .dark .social_buttons {
